Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-875

TSFetchRestpGet(), TSFetchPageResptGet() and TSFetchUrl() have incorrect asserts

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.0.0
    • 3.1.0, 3.0.1
    • TS API
    • None

    Description

      The asserts cause TS to crash when these API functions are used. The asserts are incorrect as argument 'txnp' is actually not a transaction, but a FetchSM pointer as apparent in the code that follows.

      And TSFetchUrl allows continuations to make requests with no callbacks and for such code paths, the continuation check should not be done.

      Attachments

        1. inkapi.patch
          1 kB
          Manjesh Nilange

        Activity

          People

            zwoop Leif Hedstrom
            manjeshnilange Manjesh Nilange
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment