proxy/InkAPI.cc
@@ -7104,9 +7104,7 @@ TSRedirectUrlGet(TSHttpTxn txnp, int *url_len_ptr)
 char*
 TSFetchRespGet(TSHttpTxn txnp, int *length)
 {
-  sdk_assert(sdk_sanity_check_txn(txnp) == TS_SUCCESS);
   sdk_assert(sdk_sanity_check_null_ptr((void*)length) == TS_SUCCESS);
-
   FetchSM *fetch_sm = (FetchSM*)txnp;
   return fetch_sm->resp_get(length);
 }
@@ -7114,7 +7112,6 @@ TSFetchRespGet(TSHttpTxn txnp, int *length)
 TSReturnCode
 TSFetchPageRespGet(TSHttpTxn txnp, TSMBuffer *bufp, TSMLoc *obj)
 {
-  sdk_assert(sdk_sanity_check_txn(txnp) == TS_SUCCESS);
   sdk_assert(sdk_sanity_check_null_ptr((void*)bufp) == TS_SUCCESS);
   sdk_assert(sdk_sanity_check_null_ptr((void*)obj) == TS_SUCCESS);
 
@@ -7152,7 +7149,9 @@ TSFetchPages(TSFetchUrlParams_t *params)
 void
 TSFetchUrl(const char* headers, int request_len, unsigned int ip, int port , TSCont contp, TSFetchWakeUpOptions callback_options,TSFetchEvent events)
 {
-  sdk_assert(sdk_sanity_check_continuation(contp) == TS_SUCCESS);
+  if (callback_options != NO_CALLBACK) {
+    sdk_assert(sdk_sanity_check_continuation(contp) == TS_SUCCESS);
+  }
 
   FetchSM *fetch_sm =  FetchSMAllocator.alloc();
 
